--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sever_side",
+  "name": "tourism-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
